[gd_scene load_steps=24 format=3 uid="uid://d0qokqbdjbtay"]

[ext_resource type="Script" uid="uid://bs6rpnaha6yi2" path="res://scenes/characters/player.gd" id="1_rp718"]
[ext_resource type="Resource" uid="uid://b8r4hnp3c51kl" path="res://resources/characters/frug.tres" id="2_yewv4"]
[ext_resource type="Texture2D" uid="uid://dg1frrmlihcf4" path="res://art/sprites/placeholdersfordemo/placeholder_frug.png" id="3_76oj4"]
[ext_resource type="Texture2D" uid="uid://bbeitvld8kuw" path="res://art/sprites/placeholdersfordemo/placeholder_weapon.png" id="4_dyp2m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dyp2m"]
atlas = ExtResource("3_76oj4")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atpat"]
atlas = ExtResource("3_76oj4")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqtwu"]
atlas = ExtResource("3_76oj4")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyoc"]
atlas = ExtResource("3_76oj4")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eojnx"]
atlas = ExtResource("3_76oj4")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgnko"]
atlas = ExtResource("3_76oj4")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vyk4"]
atlas = ExtResource("3_76oj4")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l4js"]
atlas = ExtResource("3_76oj4")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk2m4"]
atlas = ExtResource("3_76oj4")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhtjm"]
atlas = ExtResource("3_76oj4")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4v7y"]
atlas = ExtResource("3_76oj4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrqxk"]
atlas = ExtResource("3_76oj4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g66nw"]
atlas = ExtResource("3_76oj4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpnd8"]
atlas = ExtResource("3_76oj4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6tgn"]
atlas = ExtResource("3_76oj4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wg1y"]
atlas = ExtResource("3_76oj4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmyvj"]
atlas = ExtResource("3_76oj4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2luo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyp2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atpat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqtwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eojnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgnko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vyk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l4js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk2m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhtjm")
}],
"loop": false,
"name": &"die",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4v7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrqxk")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g66nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wg1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmyvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tgn")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyp2m"]
size = Vector2(13, 14)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 24
script = ExtResource("1_rp718")
character_data = ExtResource("2_yewv4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a2luo")
animation = &"walk"
frame_progress = 0.97505355

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 9)
shape = SubResource("RectangleShape2D_dyp2m")

[node name="WeaponPivot" type="Node2D" parent="."]
position = Vector2(5.505, 8.23)

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(5.59, -0.985)
texture = ExtResource("4_dyp2m")

[node name="AbilityCooldownTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 3.0
